<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/item_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ie_max_value"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/home_ie_max_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_ie_max_value"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv_ie_max_value"
                android:background="@null"
                android:hint="@string/home_ie_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ie_time_value"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/home_time_max_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_time_max_value"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv_ie_time_value"
                android:background="@null"
                android:hint="@string/home_ie_time"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_device_no"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/device_no_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_device_no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/tv_device_no"
                android:background="@null"
                android:hint="@string/device_no_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        android:textAllCaps="false" />
</LinearLayout>
