<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <include layout="@layout/item_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/register_rl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:text="@string/username_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/register_et_username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/register_tv_username"
                android:background="@null"
                android:hint="@string/username_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="80dp"
                android:paddingLeft="10dp"
                android:text="@string/register_pwd_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/register_et_pwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/register_tv_pwd"
                android:background="@null"
                android:hint="@string/register_pwd_hint_title"
                android:inputType="textPassword"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_tv_repwd"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:text="@string/register_pwd_re_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/register_et_repwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/register_tv_repwd"
                android:background="@null"
                android:hint="@string/register_pwd_re_hint"
                android:inputType="textPassword"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        android:textAllCaps="false" />
</LinearLayout>
