<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <include layout="@layout/item_head" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_username"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="2dp"
                android:paddingLeft="10dp"
                android:text="@string/username_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/tv_login_username"
                android:background="@null"
                android:hint="@string/username_hint"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_login_username"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_pwd"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center|left"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:text="@string/pwd_1_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_16" />

            <EditText
                android:id="@+id/et_login_pwd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/tv_login_pwd"
                android:background="@null"
                android:hint="@string/home_pwd_hint"
                android:inputType="textPassword"
                android:imeOptions="actionSearch"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="true"
                android:textColor="@color/deep_gray"
                android:textColorHint="@color/deep_gray"
                android:textSize="@dimen/textsize_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_ctrl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/rl_login_pwd"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="门锁"
                android:textSize="@dimen/textsize_18" />

            <Switch
                android:id="@+id/sw_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:thumb="@drawable/switch_ios_thumb"
                android:track="@drawable/switch_ios_track_selector"></Switch>
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_18" />

    <Button
        android:id="@+id/btn_register"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_18" />

    <Button
        android:id="@+id/btn_update_pwd"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/update_pwd"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_18" />
</LinearLayout>

