<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <include layout="@layout/item_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_hi_status_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <TextView
                android:id="@+id/home_tv_hi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_hi_status_no_person"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_ie_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <TextView
                android:id="@+id/home_tv_ie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:text="0LUX"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_al_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <TextView
                android:id="@+id/home_tv_al"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="0%"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textsize_16" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />
    </LinearLayout>

    <Button
        android:id="@+id/home_btn_hand_ctrl"
        style="@style/CustomButtonGreenStyle"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/home_hand_ctrl"
        android:textAllCaps="false"
        android:textSize="@dimen/textsize_16" />
</LinearLayout>

