<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <include layout="@layout/item_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_relay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_relay_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <Switch
                android:id="@+id/sw_relay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:thumb="@drawable/switch_ios_thumb"
                android:track="@drawable/switch_ios_track_selector"></Switch>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_fan_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <Switch
                android:id="@+id/sw_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:thumb="@drawable/switch_ios_thumb"
                android:track="@drawable/switch_ios_track_selector"></Switch>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_electric_bolt_lock_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <Switch
                android:id="@+id/sw_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:thumb="@drawable/switch_ios_thumb"
                android:track="@drawable/switch_ios_track_selector"></Switch>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/home_alarm_title"
                android:textColor="@color/colorBlackDeep"
                android:textSize="@dimen/textsize_18" />

            <Switch
                android:id="@+id/sw_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:thumb="@drawable/switch_ios_thumb"
                android:track="@drawable/switch_ios_track_selector"></Switch>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.5px"
            android:background="#E8E8E6" />
    </LinearLayout>
</LinearLayout>

